--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ matplotlib-inline==0.1.7
 mdurl==0.1.2
 narwhals==1.28.0
 nest-asyncio==1.6.0
-numpy
+numpy==1.23.5
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
